[main-private] CSWRequestTransformer updated to decode the id values after the split, thus supporting also id values (must be encoded) containing commas